# gramdex

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md
.github/: settings.yml
.github/workflows/: ci.yml
benches/: store.rs
examples/: candidate_verify_rank.rs  store_reopen_diagnostics.rs  updatable_store.rs
src/: lib.rs  store.rs
tests/: approx_match_ranking.rs
