[package]
name = "gramdex"
version = "0.1.1"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
description = "k-gram / trigram indexing primitives for approximate string matching."
publish = true
readme = "README.md"
documentation = "https://docs.rs/gramdex"
repository = "https://github.com/arclabs561/gramdex"
homepage = "https://github.com/arclabs561/gramdex"
keywords = ["string", "similarity", "ngram", "trigram", "search"]
categories = ["text-processing", "algorithms"]

[workspace]

[features]
# Optional serde derives so a built index can be persisted/reloaded.
serde = ["dep:serde"]

[dependencies]
thiserror = "2"
serde = { version = "1.0", optional = true, features = ["derive"] }

