[package]
name = "gramdex"
version = "0.4.1"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
description = "K-gram indexing for approximate string matching"
publish = true
readme = "README.md"
documentation = "https://docs.rs/gramdex"
repository = "https://github.com/arclabs561/gramdex"
homepage = "https://github.com/arclabs561/gramdex"
keywords = ["string", "similarity", "ngram", "trigram", "search"]
categories = ["text-processing", "algorithms"]

[workspace]

[features]
# Optional serde derives so a built index can be persisted/reloaded.
serde = ["dep:serde"]
# `store` adds an updatable, durable index (`store::UpdatableIndex`) via segstore.
store = ["serde", "dep:segstore", "dep:durability", "dep:postcard"]

[dependencies]
thiserror = "2"
serde = { version = "1.0", optional = true, features = ["derive"] }
segstore = { version = "0.5", optional = true }
durability = { version = "0.7.2", optional = true }
postcard = { version = "1.0", optional = true, features = ["use-crc", "alloc", "use-std"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "store"
harness = false

[[example]]
name = "updatable_store"
required-features = ["store"]

[[example]]
name = "store_reopen_diagnostics"
required-features = ["store"]
